2020-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_device_init): Prioritize 32-bit formats.

2020-06-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_convert_*): Clean up `uint32'.
	(gr_x11_device_init): Display logging.

2020-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Ignore redundant Expose from resizing.

	* graph/x11/grx11.c (gr_x11_surface_init): Enable VisibilityNotify.
	(gr_x11_surface_listen_event): Track recent Expose events and ignore
	redundant ones.

2020-06-16  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Miscellaneous clean-ups.

	* graph/x11/grx11.c (gr_x11_surface_refresh_rect): Generate Expose
	instead of `XPutImage'.
	(gr_x11_blitter_reset): Signedness.
	(gr_x11_surface_listen_event): Logging.

2020-06-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Simplify X11 driver.

	* graph/x11/grx11.c (grX11Surface): Remove redundant fields.
	(gr_x11_blitter_reset, gr_x11_surface_{resize,init}): Work directly
	with `XImage'.
	(gr_x11_surface_listen_event): Make sure resize succeeds.

2020-06-11  David Turner  <david@freetype.org>

	*/*: Include internal headers by their real names.

	The FT_INTERNAL_XXX_H macros are going to disappear.

2020-06-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_listen_event): No need to flush.

2020-06-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftmulti.c (Process_Event) Handle resizing.
	* src/ftdiff.c (main): Ditto.

2020-06-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Fix color management bugs including `ftmulti'.

	* graph/gblblit.c (grSetTargetPenBrush): New function to manage color
	and other parameters required for direct rendering.
	(grBlitGlyphToSurface): Use it here to decode color only.
	* src/ftcommon.h (FTDemo_Sketch_Glyph_Color): Use it here in full.
	* graph/graph.h: Update docs.

2020-06-01  Alexei Podtelezhnikov  <apodtele@gmail.com>
